# ReasoningBank

./: .gitignore  LICENSE  README.md  config.yaml  design.md  pyproject.toml  requirements.md  requirements.txt  setup.py  tasks.md
.github/workflows/: ci.yaml
docs/source/: conf.py  index.rst
examples/: config.yaml  simple_usage.py
reasoningbank/: __init__.py  agent.py  bank.py  distill.py  matts.py  memory.py
reasoningbank/core/: agent.py  bank.py  matts.py
reasoningbank/distillation/: distill.py
reasoningbank/integrations/langchain/: memory.py
reasoningbank/memory/: base.py  chroma.py  json.py
reasoningbank/utils/: config.py
tests/: test_bank.py  test_integration.py  test_memory.py
